export const snapshot = {};

snapshot[`./generated/types.ts 1`] = `
{
  content: '/**
  * Type Definitions
  * Generated by Disc TypeScript Codegen
  * Generated at: <MASKED>
  *
  * DO NOT EDIT THIS FILE MANUALLY
  */
/**
 * Status enum type from EdgeQL schema
 */
export type Status = "active" | "inactive" | "pending";

/**
 * User type from EdgeQL schema
 * Table: users
 */
export interface User {
  /** Unique identifier */
  id: string;
  /**
   * str (required)
   * @constraint max_length(255)
   */
  name: string;
  /**
   * str (required)
   * @constraint exclusive
   */
  email: string;
  /**
   * datetime (required)
   * @readonly
   * @default
   */
  createdAt: Date;
  /** bool */
  active?: boolean | null;
  /** int32 */
  age?: number | null;
  /** int32 */
  postCount?: number | null;
  /** Link to Post (many) */
  posts?: Post[] | null;
}

/**
 * Post type from EdgeQL schema
 * Table: posts
 */
export interface Post {
  /** Unique identifier */
  id: string;
  /** str (required) */
  title: string;
  /** str (required) */
  body: string;
  /**
   * datetime (required)
   * @readonly
   * @default
   */
  createdAt: Date;
  /** Link to User (one, required) */
  author: [User];
}

/**
 * Utility types for EdgeQL operations
 */

/** Query result wrapper */
export interface QueryResult<T> {
  data: T;
  extensions?: {
    durationMs?: number;
    queryHash?: string;
    sql?: string;
  };
}

/** Query error */
export interface QueryError {
  message: string;
  locations?: Array<{ line: number; column: number }>;
  path?: Array<string | number>;
  extensions?: Record<string, any>;
}

/** Equality + set operators — available on every scalar field */
export interface Op<T> {
  eq?: T;
  ne?: T;
  in?: T[];
  not_in?: T[];
}

/** Ordered operators — numbers, dates, durations */
export interface OrdOp<T> extends Op<T> {
  gt?: T;
  gte?: T;
  lt?: T;
  lte?: T;
}

/** String operators — adds pattern matching to ordered string ops */
export interface StrOp extends OrdOp<string> {
  like?: string;
  ilike?: string;
}/** Insert/Update/MutationResult/Row/FilterVars/Filter/Select data types */
export interface UserInsert {
  name: string;
  email: string;
  active?: boolean;
  age?: number;
  /** UUIDs of linked Post (assigns the full set) */
  posts?: string[];
}

export interface UserUpdate {
  name?: string;
  email?: string;
  active?: boolean;
  age?: number;
  /** UUIDs of linked Post: an array replaces the whole set; { add, remove } applies a delta */
  posts?: string[] | { add?: string[]; remove?: string[] };
}

/** User as insert() and update() return it: the stored row, single links as target ids; no multi links or computed fields */
export interface UserMutationResult {
  id: string;
  name: string;
  email: string;
  createdAt: Date;
  active: boolean | null;
  age: number | null;
}

/** User as select(), selectById() and filter() return it without a shape: id and stored properties; no links or computed fields */
export interface UserRow {
  id: string;
  name: string;
  email: string;
  createdAt: Date;
  active: boolean | null;
  age: number | null;
}

export interface UserFilterVars {
  id?: string;
  name?: string;
  email?: string;
  createdAt?: Date;
  active?: boolean;
  age?: number;
  postCount?: number;
  [key: string]: unknown;
}

export interface UserFilter {
  id?: string | Op<string>;
  name?: string | StrOp;
  email?: string | StrOp;
  createdAt?: Date | OrdOp<Date>;
  active?: boolean | Op<boolean>;
  age?: number | OrdOp<number>;
  posts?: PostFilter;
  select?: UserSelect;
  order_by?: string | string[];
  limit?: number;
  offset?: number;
}

export interface UserSelect {
  "*"?: boolean;
  filter?: UserFilter;
  order_by?: string | string[];
  limit?: number;
  offset?: number;
  id?: boolean;
  name?: boolean;
  email?: boolean;
  createdAt?: boolean;
  active?: boolean;
  age?: boolean;
  postCount?: boolean;
  posts?: boolean | PostSelect;
}

export interface PostInsert {
  title: string;
  body: string;
  /** UUID of the linked User */
  author: string;
}

export interface PostUpdate {
  title?: string;
  body?: string;
  /** UUID of the linked User */
  author?: string;
}

/** Post as insert() and update() return it: the stored row, single links as target ids; no multi links or computed fields */
export interface PostMutationResult {
  id: string;
  title: string;
  body: string;
  createdAt: Date;
  author: string;
}

/** Post as select(), selectById() and filter() return it without a shape: id and stored properties; no links or computed fields */
export interface PostRow {
  id: string;
  title: string;
  body: string;
  createdAt: Date;
}

export interface PostFilterVars {
  id?: string;
  title?: string;
  body?: string;
  createdAt?: Date;
  [key: string]: unknown;
}

export interface PostFilter {
  id?: string | Op<string>;
  title?: string | StrOp;
  body?: string | StrOp;
  createdAt?: Date | OrdOp<Date>;
  author?: UserFilter;
  select?: PostSelect;
  order_by?: string | string[];
  limit?: number;
  offset?: number;
}

export interface PostSelect {
  "*"?: boolean;
  filter?: PostFilter;
  order_by?: string | string[];
  limit?: number;
  offset?: number;
  id?: boolean;
  title?: boolean;
  body?: boolean;
  createdAt?: boolean;
  author?: boolean | UserSelect;
}
',
  path: "./generated/types.ts",
}
`;

snapshot[`./generated/queries.ts 1`] = `
{
  content: '/**
  * Query Builders
  * Generated by Disc TypeScript Codegen
  * Generated at: <MASKED>
  *
  * DO NOT EDIT THIS FILE MANUALLY
  */
import * as Types from "./types.ts";
import { DiscClient } from "./client.ts";
import { compileFilter, escapeEdgeQLIdent, reviveTyped, type FilterArg, type TypeInfo } from "./sdk/mod.ts";

/**
 * Query builder for User
 */
export class UserQueryBuilder {
  private static _typeCasts: Record<string, string> = {
    name: "<str>",
    email: "<str>",
    createdAt: "<datetime>",
    active: "<bool>",
    age: "<int32>",
  };

  private static _multiLinkTargets: Record<string, string> = {
    posts: "Post",
  };

  static readonly _typeInfo: TypeInfo = {
    casts: {
      id: "<uuid>",
      name: "<str>",
      email: "<str>",
      createdAt: "<datetime>",
      active: "<bool>",
      age: "<int32>",
      postCount: "<int32>",
    },
    links: {
      posts: () => PostQueryBuilder._typeInfo,
    },
    multi: ["posts"]
  };

  constructor(private client: DiscClient) {}

  /** Select all User objects: without a shape, \`id\` and the stored properties */
  select(): Promise<Types.UserRow[]>;
  select(shape: string): Promise<Types.User[]>;
  async select(shape?: string): Promise<Types.UserRow[] | Types.User[]> {
    const query = shape 
      ? \`select User \${shape}\`
      : \`select User { * }\`;
    return reviveTyped(await this.client.query<Types.UserRow[] | Types.User[]>(query), UserQueryBuilder._typeInfo);
  }

  /** Select User by ID: without a shape, \`id\` and the stored properties */
  selectById(id: string): Promise<Types.UserRow | null>;
  selectById(id: string, shape: string): Promise<Types.User | null>;
  async selectById(id: string, shape?: string): Promise<Types.UserRow | Types.User | null> {
    const query = shape
      ? \`select User \${shape} filter .id = <uuid>\$id\`
      : \`select User { * } filter .id = <uuid>\$id\`;
    const results = reviveTyped(await this.client.query<(Types.UserRow | Types.User)[]>(query, { id }), UserQueryBuilder._typeInfo);
    return results[0] || null;
  }

  /** Filter User objects: without a \`select\`, \`id\` and the stored properties */
  filter(filter: FilterArg<Types.UserFilter> & { select?: undefined }): Promise<Types.UserRow[]>;
  filter(filter: FilterArg<Types.UserFilter>): Promise<Types.User[]>;
  async filter(filter: FilterArg<Types.UserFilter>): Promise<Types.UserRow[] | Types.User[]> {
    const compiled = compileFilter("User", filter, UserQueryBuilder._typeInfo);
    const shape = compiled.selectShape ?? "{ * }";
    const parts: string[] = [\`select User \${shape}\`];
    if (compiled.clause) parts.push(\`filter \${compiled.clause}\`);
    if (compiled.orderBy) parts.push(compiled.orderBy);
    if (compiled.limit !== null) parts.push(\`limit \${compiled.limit}\`);
    if (compiled.offset !== null) parts.push(\`offset \${compiled.offset}\`);
    return reviveTyped(await this.client.query<Types.UserRow[] | Types.User[]>(parts.join(" "), compiled.variables), UserQueryBuilder._typeInfo);
  }

  /** Insert new User. Resolves to its stored row: single links as ids, no multi links. */
  async insert(data: Types.UserInsert): Promise<Types.UserMutationResult> {
    const variables: Record<string, unknown> = {};
    const assignments = Object.entries(data).map(([key, value]) => {
      const target = UserQueryBuilder._multiLinkTargets[key];
      if (target) {
        variables[key] = value;
        return \`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`;
      }
      variables[key] = value;
      return \`\${escapeEdgeQLIdent(key)} := \${UserQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`;
    }).join(", ");
    const query = \`insert User { \${assignments} }\`;
    const [row] = reviveTyped(await this.client.query<Types.UserMutationResult[]>(query, variables), UserQueryBuilder._typeInfo);
    return row;
  }

  /** Update User by ID. Resolves to its stored row (single links as ids, no multi links), or \`{ updated: 0 }\` when no User has that ID. */
  async update(id: string, data: Types.UserUpdate): Promise<Types.UserMutationResult | { updated: 0 }> {
    const variables: Record<string, unknown> = { id };
    const assignments: string[] = [];
    for (const [key, value] of Object.entries(data)) {
      const target = UserQueryBuilder._multiLinkTargets[key];
      if (target) {
        if (Array.isArray(value)) {
          variables[key] = value;
          assignments.push(\`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`);
        } else {
          const delta = (value ?? {}) as { add?: string[]; remove?: string[] };
          if (delta.add) {
            variables[\`\${key}__add\`] = delta.add;
            assignments.push(\`\${escapeEdgeQLIdent(key)} += (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__add))\`);
          }
          if (delta.remove) {
            variables[\`\${key}__remove\`] = delta.remove;
            assignments.push(\`\${escapeEdgeQLIdent(key)} -= (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__remove))\`);
          }
        }
        continue;
      }
      variables[key] = value;
      assignments.push(\`\${escapeEdgeQLIdent(key)} := \${UserQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`);
    }
    const query = \`update User filter .id = <uuid>\$id set { \${assignments.join(", ")} }\`;
    const [row] = reviveTyped(await this.client.query<Types.UserMutationResult[]>(query, variables), UserQueryBuilder._typeInfo);
    return row ?? { updated: 0 };
  }

  /** Delete User by ID. Resolves to the number of rows deleted (0 or 1); use \`select (delete …) { … }\` to read the row back. */
  async delete(id: string): Promise<{ deleted: number }> {
    const query = \`delete User filter .id = <uuid>\$id\`;
    const rows = await this.client.query<unknown[]>(query, { id });
    return { deleted: rows.length };
  }

  /** Count User objects */
  async count(condition?: string, variables?: Types.UserFilterVars): Promise<number> {
    const query = condition
      ? \`select count(User filter \${condition})\`
      : \`select count(User)\`;
    const [count] = await this.client.query<[number]>(query, variables);
    return count;
  }
}

/**
 * Query builder for Post
 */
export class PostQueryBuilder {
  private static _typeCasts: Record<string, string> = {
    title: "<str>",
    body: "<str>",
    createdAt: "<datetime>",
    author: "<uuid>",
  };

  private static _multiLinkTargets: Record<string, string> = {
  };

  static readonly _typeInfo: TypeInfo = {
    casts: {
      id: "<uuid>",
      title: "<str>",
      body: "<str>",
      createdAt: "<datetime>",
    },
    links: {
      author: () => UserQueryBuilder._typeInfo,
    }
  };

  constructor(private client: DiscClient) {}

  /** Select all Post objects: without a shape, \`id\` and the stored properties */
  select(): Promise<Types.PostRow[]>;
  select(shape: string): Promise<Types.Post[]>;
  async select(shape?: string): Promise<Types.PostRow[] | Types.Post[]> {
    const query = shape 
      ? \`select Post \${shape}\`
      : \`select Post { * }\`;
    return reviveTyped(await this.client.query<Types.PostRow[] | Types.Post[]>(query), PostQueryBuilder._typeInfo);
  }

  /** Select Post by ID: without a shape, \`id\` and the stored properties */
  selectById(id: string): Promise<Types.PostRow | null>;
  selectById(id: string, shape: string): Promise<Types.Post | null>;
  async selectById(id: string, shape?: string): Promise<Types.PostRow | Types.Post | null> {
    const query = shape
      ? \`select Post \${shape} filter .id = <uuid>\$id\`
      : \`select Post { * } filter .id = <uuid>\$id\`;
    const results = reviveTyped(await this.client.query<(Types.PostRow | Types.Post)[]>(query, { id }), PostQueryBuilder._typeInfo);
    return results[0] || null;
  }

  /** Filter Post objects: without a \`select\`, \`id\` and the stored properties */
  filter(filter: FilterArg<Types.PostFilter> & { select?: undefined }): Promise<Types.PostRow[]>;
  filter(filter: FilterArg<Types.PostFilter>): Promise<Types.Post[]>;
  async filter(filter: FilterArg<Types.PostFilter>): Promise<Types.PostRow[] | Types.Post[]> {
    const compiled = compileFilter("Post", filter, PostQueryBuilder._typeInfo);
    const shape = compiled.selectShape ?? "{ * }";
    const parts: string[] = [\`select Post \${shape}\`];
    if (compiled.clause) parts.push(\`filter \${compiled.clause}\`);
    if (compiled.orderBy) parts.push(compiled.orderBy);
    if (compiled.limit !== null) parts.push(\`limit \${compiled.limit}\`);
    if (compiled.offset !== null) parts.push(\`offset \${compiled.offset}\`);
    return reviveTyped(await this.client.query<Types.PostRow[] | Types.Post[]>(parts.join(" "), compiled.variables), PostQueryBuilder._typeInfo);
  }

  /** Insert new Post. Resolves to its stored row: single links as ids, no multi links. */
  async insert(data: Types.PostInsert): Promise<Types.PostMutationResult> {
    const variables: Record<string, unknown> = {};
    const assignments = Object.entries(data).map(([key, value]) => {
      const target = PostQueryBuilder._multiLinkTargets[key];
      if (target) {
        variables[key] = value;
        return \`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`;
      }
      variables[key] = value;
      return \`\${escapeEdgeQLIdent(key)} := \${PostQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`;
    }).join(", ");
    const query = \`insert Post { \${assignments} }\`;
    const [row] = reviveTyped(await this.client.query<Types.PostMutationResult[]>(query, variables), PostQueryBuilder._typeInfo);
    return row;
  }

  /** Update Post by ID. Resolves to its stored row (single links as ids, no multi links), or \`{ updated: 0 }\` when no Post has that ID. */
  async update(id: string, data: Types.PostUpdate): Promise<Types.PostMutationResult | { updated: 0 }> {
    const variables: Record<string, unknown> = { id };
    const assignments: string[] = [];
    for (const [key, value] of Object.entries(data)) {
      const target = PostQueryBuilder._multiLinkTargets[key];
      if (target) {
        if (Array.isArray(value)) {
          variables[key] = value;
          assignments.push(\`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`);
        } else {
          const delta = (value ?? {}) as { add?: string[]; remove?: string[] };
          if (delta.add) {
            variables[\`\${key}__add\`] = delta.add;
            assignments.push(\`\${escapeEdgeQLIdent(key)} += (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__add))\`);
          }
          if (delta.remove) {
            variables[\`\${key}__remove\`] = delta.remove;
            assignments.push(\`\${escapeEdgeQLIdent(key)} -= (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__remove))\`);
          }
        }
        continue;
      }
      variables[key] = value;
      assignments.push(\`\${escapeEdgeQLIdent(key)} := \${PostQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`);
    }
    const query = \`update Post filter .id = <uuid>\$id set { \${assignments.join(", ")} }\`;
    const [row] = reviveTyped(await this.client.query<Types.PostMutationResult[]>(query, variables), PostQueryBuilder._typeInfo);
    return row ?? { updated: 0 };
  }

  /** Delete Post by ID. Resolves to the number of rows deleted (0 or 1); use \`select (delete …) { … }\` to read the row back. */
  async delete(id: string): Promise<{ deleted: number }> {
    const query = \`delete Post filter .id = <uuid>\$id\`;
    const rows = await this.client.query<unknown[]>(query, { id });
    return { deleted: rows.length };
  }

  /** Count Post objects */
  async count(condition?: string, variables?: Types.PostFilterVars): Promise<number> {
    const query = condition
      ? \`select count(Post filter \${condition})\`
      : \`select count(Post)\`;
    const [count] = await this.client.query<[number]>(query, variables);
    return count;
  }
}
',
  path: "./generated/queries.ts",
}
`;

snapshot[`./generated/client.ts 1`] = `
{
  content: '/**
  * Disc Client
  * Generated by Disc TypeScript Codegen
  * Generated at: <MASKED>
  *
  * DO NOT EDIT THIS FILE MANUALLY
  */
import { DiscClient as BaseClient, type DiscClientConfig } from "./sdk/mod.ts";
export type { DiscClientConfig } from "./sdk/mod.ts";
export { and, AuthManager, not, or, SubscriptionClient } from "./sdk/mod.ts";
import * as Queries from "./queries.ts";

/**
 * Type-safe Disc database client with query builders
 */
export class DiscClient extends BaseClient {
  /** Query builder for User */
  readonly user: Queries.UserQueryBuilder;
  /** Query builder for Post */
  readonly post: Queries.PostQueryBuilder;

  constructor(config?: DiscClientConfig) {
    super(config);
    this.user = new Queries.UserQueryBuilder(this);
    this.post = new Queries.PostQueryBuilder(this);
  }
}
',
  path: "./generated/client.ts",
}
`;

snapshot[`./generated/index.ts 1`] = `
{
  content: '/**
  * Generated API
  * Generated by Disc TypeScript Codegen
  * Generated at: <MASKED>
  *
  * DO NOT EDIT THIS FILE MANUALLY
  */
// Type definitions
export * from "./types.ts";

// Query builders
export * from "./queries.ts";

// Client
export * from "./client.ts";

// SDK re-exports
export { and, AuthManager, not, or, SubscriptionClient } from "./client.ts";

// Default client export
import { DiscClient } from "./client.ts";
export default DiscClient;
',
  path: "./generated/index.ts",
}
`;

snapshot[`./generated/interfaces.ts 1`] = `
{
  content: '/**
  * Type Definitions
  * Generated by Disc TypeScript Codegen
  * Generated at: <MASKED>
  *
  * DO NOT EDIT THIS FILE MANUALLY
  */
export namespace \$default {
  /**
   * MerchantStatus enum type from EdgeQL schema
   */
  export type MerchantStatus = "active" | "suspended" | "pending";

  /**
   * Merchant type from EdgeQL schema
   * Table: merchants
   */
  export interface Merchant {
    /** Unique identifier */
    id: string;
    /** str (required) */
    name: string;
    /** str */
    status?: string | null;
    /** Link to api::ApiKey (many) */
    apiKeys?: api.ApiKey[] | null;
    /** Link to payment::Payment (many) */
    payments?: payment.Payment[] | null;
  }

  export interface MerchantInsert {
    name: string;
    status?: string;
    /** UUIDs of linked ApiKey (assigns the full set) */
    apiKeys?: string[];
    /** UUIDs of linked Payment (assigns the full set) */
    payments?: string[];
  }

  export interface MerchantUpdate {
    name?: string;
    status?: string;
    /** UUIDs of linked ApiKey: an array replaces the whole set; { add, remove } applies a delta */
    apiKeys?: string[] | { add?: string[]; remove?: string[] };
    /** UUIDs of linked Payment: an array replaces the whole set; { add, remove } applies a delta */
    payments?: string[] | { add?: string[]; remove?: string[] };
  }

  /** Merchant as insert() and update() return it: the stored row, single links as target ids; no multi links or computed fields */
  export interface MerchantMutationResult {
    id: string;
    name: string;
    status: string | null;
  }

  /** Merchant as select(), selectById() and filter() return it without a shape: id and stored properties; no links or computed fields */
  export interface MerchantRow {
    id: string;
    name: string;
    status: string | null;
  }

  export interface MerchantFilterVars {
    id?: string;
    name?: string;
    status?: string;
    [key: string]: unknown;
  }

  export interface MerchantFilter {
    id?: string | Op<string>;
    name?: string | StrOp;
    status?: string | StrOp;
    apiKeys?: api.ApiKeyFilter;
    payments?: payment.PaymentFilter;
    select?: MerchantSelect;
    order_by?: string | string[];
    limit?: number;
    offset?: number;
  }

  export interface MerchantSelect {
    "*"?: boolean;
    filter?: MerchantFilter;
    order_by?: string | string[];
    limit?: number;
    offset?: number;
    id?: boolean;
    name?: boolean;
    status?: boolean;
    apiKeys?: boolean | api.ApiKeySelect;
    payments?: boolean | payment.PaymentSelect;
  }

}

export namespace api {
  /**
   * ApiKey type from EdgeQL schema
   * Table: api_keys
   */
  export interface ApiKey {
    /** Unique identifier */
    id: string;
    /**
     * str (required)
     * @constraint exclusive
     */
    key: string;
    /**
     * bool (required)
     * @default
     */
    active: boolean;
    /** Link to Merchant (one, required) */
    merchant: [\$default.Merchant];
  }

  export interface ApiKeyInsert {
    key: string;
    active?: boolean;
    /** UUID of the linked Merchant */
    merchant: string;
  }

  export interface ApiKeyUpdate {
    key?: string;
    active?: boolean;
    /** UUID of the linked Merchant */
    merchant?: string;
  }

  /** ApiKey as insert() and update() return it: the stored row, single links as target ids; no multi links or computed fields */
  export interface ApiKeyMutationResult {
    id: string;
    key: string;
    active: boolean;
    merchant: string;
  }

  /** ApiKey as select(), selectById() and filter() return it without a shape: id and stored properties; no links or computed fields */
  export interface ApiKeyRow {
    id: string;
    key: string;
    active: boolean;
  }

  export interface ApiKeyFilterVars {
    id?: string;
    key?: string;
    active?: boolean;
    [key: string]: unknown;
  }

  export interface ApiKeyFilter {
    id?: string | Op<string>;
    key?: string | StrOp;
    active?: boolean | Op<boolean>;
    merchant?: \$default.MerchantFilter;
    select?: ApiKeySelect;
    order_by?: string | string[];
    limit?: number;
    offset?: number;
  }

  export interface ApiKeySelect {
    "*"?: boolean;
    filter?: ApiKeyFilter;
    order_by?: string | string[];
    limit?: number;
    offset?: number;
    id?: boolean;
    key?: boolean;
    active?: boolean;
    merchant?: boolean | \$default.MerchantSelect;
  }

}

export namespace payment {
  /**
   * PaymentStatus enum type from EdgeQL schema
   */
  export type PaymentStatus = "pending" | "completed" | "failed" | "refunded";

  /**
   * Payment type from EdgeQL schema
   * Table: payments
   */
  export interface Payment {
    /** Unique identifier */
    id: string;
    /** decimal (required) */
    amount: string;
    /** str (required) */
    currency: string;
    /** str */
    status?: string | null;
    /** Link to Merchant (one, required) */
    merchant: [\$default.Merchant];
  }

  export interface PaymentInsert {
    amount: string;
    currency: string;
    status?: string;
    /** UUID of the linked Merchant */
    merchant: string;
  }

  export interface PaymentUpdate {
    amount?: string;
    currency?: string;
    status?: string;
    /** UUID of the linked Merchant */
    merchant?: string;
  }

  /** Payment as insert() and update() return it: the stored row, single links as target ids; no multi links or computed fields */
  export interface PaymentMutationResult {
    id: string;
    amount: string;
    currency: string;
    status: string | null;
    merchant: string;
  }

  /** Payment as select(), selectById() and filter() return it without a shape: id and stored properties; no links or computed fields */
  export interface PaymentRow {
    id: string;
    amount: string;
    currency: string;
    status: string | null;
  }

  export interface PaymentFilterVars {
    id?: string;
    amount?: string;
    currency?: string;
    status?: string;
    [key: string]: unknown;
  }

  export interface PaymentFilter {
    id?: string | Op<string>;
    amount?: string | OrdOp<string>;
    currency?: string | StrOp;
    status?: string | StrOp;
    merchant?: \$default.MerchantFilter;
    select?: PaymentSelect;
    order_by?: string | string[];
    limit?: number;
    offset?: number;
  }

  export interface PaymentSelect {
    "*"?: boolean;
    filter?: PaymentFilter;
    order_by?: string | string[];
    limit?: number;
    offset?: number;
    id?: boolean;
    amount?: boolean;
    currency?: boolean;
    status?: boolean;
    merchant?: boolean | \$default.MerchantSelect;
  }

}

/**
 * Utility types for EdgeQL operations
 */

/** Query result wrapper */
export interface QueryResult<T> {
  data: T;
  extensions?: {
    durationMs?: number;
    queryHash?: string;
    sql?: string;
  };
}

/** Query error */
export interface QueryError {
  message: string;
  locations?: Array<{ line: number; column: number }>;
  path?: Array<string | number>;
  extensions?: Record<string, any>;
}

/** Equality + set operators — available on every scalar field */
export interface Op<T> {
  eq?: T;
  ne?: T;
  in?: T[];
  not_in?: T[];
}

/** Ordered operators — numbers, dates, durations */
export interface OrdOp<T> extends Op<T> {
  gt?: T;
  gte?: T;
  lt?: T;
  lte?: T;
}

/** String operators — adds pattern matching to ordered string ops */
export interface StrOp extends OrdOp<string> {
  like?: string;
  ilike?: string;
}
',
  path: "./generated/interfaces.ts",
}
`;

snapshot[`./generated/queries.ts 2`] = `
{
  content: '/**
  * Query Builders
  * Generated by Disc TypeScript Codegen
  * Generated at: <MASKED>
  *
  * DO NOT EDIT THIS FILE MANUALLY
  */
import * as Types from "./interfaces.ts";
import { DiscClient } from "./client.ts";
import { compileFilter, escapeEdgeQLIdent, reviveTyped, type FilterArg, type TypeInfo } from "./sdk/mod.ts";

/**
 * Query builder for Merchant
 */
export class MerchantQueryBuilder {
  private static _typeCasts: Record<string, string> = {
    name: "<str>",
    status: "<str>",
  };

  private static _multiLinkTargets: Record<string, string> = {
    apiKeys: "ApiKey",
    payments: "Payment",
  };

  static readonly _typeInfo: TypeInfo = {
    casts: {
      id: "<uuid>",
      name: "<str>",
      status: "<str>",
    },
    links: {
      apiKeys: () => ApiKeyQueryBuilder._typeInfo,
      payments: () => PaymentQueryBuilder._typeInfo,
    },
    multi: ["apiKeys", "payments"]
  };

  constructor(private client: DiscClient) {}

  /** Select all Merchant objects: without a shape, \`id\` and the stored properties */
  select(): Promise<Types.\$default.MerchantRow[]>;
  select(shape: string): Promise<Types.\$default.Merchant[]>;
  async select(shape?: string): Promise<Types.\$default.MerchantRow[] | Types.\$default.Merchant[]> {
    const query = shape 
      ? \`select Merchant \${shape}\`
      : \`select Merchant { * }\`;
    return reviveTyped(await this.client.query<Types.\$default.MerchantRow[] | Types.\$default.Merchant[]>(query), MerchantQueryBuilder._typeInfo);
  }

  /** Select Merchant by ID: without a shape, \`id\` and the stored properties */
  selectById(id: string): Promise<Types.\$default.MerchantRow | null>;
  selectById(id: string, shape: string): Promise<Types.\$default.Merchant | null>;
  async selectById(id: string, shape?: string): Promise<Types.\$default.MerchantRow | Types.\$default.Merchant | null> {
    const query = shape
      ? \`select Merchant \${shape} filter .id = <uuid>\$id\`
      : \`select Merchant { * } filter .id = <uuid>\$id\`;
    const results = reviveTyped(await this.client.query<(Types.\$default.MerchantRow | Types.\$default.Merchant)[]>(query, { id }), MerchantQueryBuilder._typeInfo);
    return results[0] || null;
  }

  /** Filter Merchant objects: without a \`select\`, \`id\` and the stored properties */
  filter(filter: FilterArg<Types.\$default.MerchantFilter> & { select?: undefined }): Promise<Types.\$default.MerchantRow[]>;
  filter(filter: FilterArg<Types.\$default.MerchantFilter>): Promise<Types.\$default.Merchant[]>;
  async filter(filter: FilterArg<Types.\$default.MerchantFilter>): Promise<Types.\$default.MerchantRow[] | Types.\$default.Merchant[]> {
    const compiled = compileFilter("Merchant", filter, MerchantQueryBuilder._typeInfo);
    const shape = compiled.selectShape ?? "{ * }";
    const parts: string[] = [\`select Merchant \${shape}\`];
    if (compiled.clause) parts.push(\`filter \${compiled.clause}\`);
    if (compiled.orderBy) parts.push(compiled.orderBy);
    if (compiled.limit !== null) parts.push(\`limit \${compiled.limit}\`);
    if (compiled.offset !== null) parts.push(\`offset \${compiled.offset}\`);
    return reviveTyped(await this.client.query<Types.\$default.MerchantRow[] | Types.\$default.Merchant[]>(parts.join(" "), compiled.variables), MerchantQueryBuilder._typeInfo);
  }

  /** Insert new Merchant. Resolves to its stored row: single links as ids, no multi links. */
  async insert(data: Types.\$default.MerchantInsert): Promise<Types.\$default.MerchantMutationResult> {
    const variables: Record<string, unknown> = {};
    const assignments = Object.entries(data).map(([key, value]) => {
      const target = MerchantQueryBuilder._multiLinkTargets[key];
      if (target) {
        variables[key] = value;
        return \`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`;
      }
      variables[key] = value;
      return \`\${escapeEdgeQLIdent(key)} := \${MerchantQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`;
    }).join(", ");
    const query = \`insert Merchant { \${assignments} }\`;
    const [row] = reviveTyped(await this.client.query<Types.\$default.MerchantMutationResult[]>(query, variables), MerchantQueryBuilder._typeInfo);
    return row;
  }

  /** Update Merchant by ID. Resolves to its stored row (single links as ids, no multi links), or \`{ updated: 0 }\` when no Merchant has that ID. */
  async update(id: string, data: Types.\$default.MerchantUpdate): Promise<Types.\$default.MerchantMutationResult | { updated: 0 }> {
    const variables: Record<string, unknown> = { id };
    const assignments: string[] = [];
    for (const [key, value] of Object.entries(data)) {
      const target = MerchantQueryBuilder._multiLinkTargets[key];
      if (target) {
        if (Array.isArray(value)) {
          variables[key] = value;
          assignments.push(\`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`);
        } else {
          const delta = (value ?? {}) as { add?: string[]; remove?: string[] };
          if (delta.add) {
            variables[\`\${key}__add\`] = delta.add;
            assignments.push(\`\${escapeEdgeQLIdent(key)} += (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__add))\`);
          }
          if (delta.remove) {
            variables[\`\${key}__remove\`] = delta.remove;
            assignments.push(\`\${escapeEdgeQLIdent(key)} -= (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__remove))\`);
          }
        }
        continue;
      }
      variables[key] = value;
      assignments.push(\`\${escapeEdgeQLIdent(key)} := \${MerchantQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`);
    }
    const query = \`update Merchant filter .id = <uuid>\$id set { \${assignments.join(", ")} }\`;
    const [row] = reviveTyped(await this.client.query<Types.\$default.MerchantMutationResult[]>(query, variables), MerchantQueryBuilder._typeInfo);
    return row ?? { updated: 0 };
  }

  /** Delete Merchant by ID. Resolves to the number of rows deleted (0 or 1); use \`select (delete …) { … }\` to read the row back. */
  async delete(id: string): Promise<{ deleted: number }> {
    const query = \`delete Merchant filter .id = <uuid>\$id\`;
    const rows = await this.client.query<unknown[]>(query, { id });
    return { deleted: rows.length };
  }

  /** Count Merchant objects */
  async count(condition?: string, variables?: Types.\$default.MerchantFilterVars): Promise<number> {
    const query = condition
      ? \`select count(Merchant filter \${condition})\`
      : \`select count(Merchant)\`;
    const [count] = await this.client.query<[number]>(query, variables);
    return count;
  }
}

/**
 * Query builder for ApiKey
 */
export class ApiKeyQueryBuilder {
  private static _typeCasts: Record<string, string> = {
    key: "<str>",
    active: "<bool>",
    merchant: "<uuid>",
  };

  private static _multiLinkTargets: Record<string, string> = {
  };

  static readonly _typeInfo: TypeInfo = {
    casts: {
      id: "<uuid>",
      key: "<str>",
      active: "<bool>",
    },
    links: {
      merchant: () => MerchantQueryBuilder._typeInfo,
    }
  };

  constructor(private client: DiscClient) {}

  /** Select all ApiKey objects: without a shape, \`id\` and the stored properties */
  select(): Promise<Types.api.ApiKeyRow[]>;
  select(shape: string): Promise<Types.api.ApiKey[]>;
  async select(shape?: string): Promise<Types.api.ApiKeyRow[] | Types.api.ApiKey[]> {
    const query = shape 
      ? \`select api::ApiKey \${shape}\`
      : \`select api::ApiKey { * }\`;
    return reviveTyped(await this.client.query<Types.api.ApiKeyRow[] | Types.api.ApiKey[]>(query), ApiKeyQueryBuilder._typeInfo);
  }

  /** Select ApiKey by ID: without a shape, \`id\` and the stored properties */
  selectById(id: string): Promise<Types.api.ApiKeyRow | null>;
  selectById(id: string, shape: string): Promise<Types.api.ApiKey | null>;
  async selectById(id: string, shape?: string): Promise<Types.api.ApiKeyRow | Types.api.ApiKey | null> {
    const query = shape
      ? \`select api::ApiKey \${shape} filter .id = <uuid>\$id\`
      : \`select api::ApiKey { * } filter .id = <uuid>\$id\`;
    const results = reviveTyped(await this.client.query<(Types.api.ApiKeyRow | Types.api.ApiKey)[]>(query, { id }), ApiKeyQueryBuilder._typeInfo);
    return results[0] || null;
  }

  /** Filter ApiKey objects: without a \`select\`, \`id\` and the stored properties */
  filter(filter: FilterArg<Types.api.ApiKeyFilter> & { select?: undefined }): Promise<Types.api.ApiKeyRow[]>;
  filter(filter: FilterArg<Types.api.ApiKeyFilter>): Promise<Types.api.ApiKey[]>;
  async filter(filter: FilterArg<Types.api.ApiKeyFilter>): Promise<Types.api.ApiKeyRow[] | Types.api.ApiKey[]> {
    const compiled = compileFilter("api::ApiKey", filter, ApiKeyQueryBuilder._typeInfo);
    const shape = compiled.selectShape ?? "{ * }";
    const parts: string[] = [\`select api::ApiKey \${shape}\`];
    if (compiled.clause) parts.push(\`filter \${compiled.clause}\`);
    if (compiled.orderBy) parts.push(compiled.orderBy);
    if (compiled.limit !== null) parts.push(\`limit \${compiled.limit}\`);
    if (compiled.offset !== null) parts.push(\`offset \${compiled.offset}\`);
    return reviveTyped(await this.client.query<Types.api.ApiKeyRow[] | Types.api.ApiKey[]>(parts.join(" "), compiled.variables), ApiKeyQueryBuilder._typeInfo);
  }

  /** Insert new ApiKey. Resolves to its stored row: single links as ids, no multi links. */
  async insert(data: Types.api.ApiKeyInsert): Promise<Types.api.ApiKeyMutationResult> {
    const variables: Record<string, unknown> = {};
    const assignments = Object.entries(data).map(([key, value]) => {
      const target = ApiKeyQueryBuilder._multiLinkTargets[key];
      if (target) {
        variables[key] = value;
        return \`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`;
      }
      variables[key] = value;
      return \`\${escapeEdgeQLIdent(key)} := \${ApiKeyQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`;
    }).join(", ");
    const query = \`insert api::ApiKey { \${assignments} }\`;
    const [row] = reviveTyped(await this.client.query<Types.api.ApiKeyMutationResult[]>(query, variables), ApiKeyQueryBuilder._typeInfo);
    return row;
  }

  /** Update ApiKey by ID. Resolves to its stored row (single links as ids, no multi links), or \`{ updated: 0 }\` when no ApiKey has that ID. */
  async update(id: string, data: Types.api.ApiKeyUpdate): Promise<Types.api.ApiKeyMutationResult | { updated: 0 }> {
    const variables: Record<string, unknown> = { id };
    const assignments: string[] = [];
    for (const [key, value] of Object.entries(data)) {
      const target = ApiKeyQueryBuilder._multiLinkTargets[key];
      if (target) {
        if (Array.isArray(value)) {
          variables[key] = value;
          assignments.push(\`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`);
        } else {
          const delta = (value ?? {}) as { add?: string[]; remove?: string[] };
          if (delta.add) {
            variables[\`\${key}__add\`] = delta.add;
            assignments.push(\`\${escapeEdgeQLIdent(key)} += (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__add))\`);
          }
          if (delta.remove) {
            variables[\`\${key}__remove\`] = delta.remove;
            assignments.push(\`\${escapeEdgeQLIdent(key)} -= (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__remove))\`);
          }
        }
        continue;
      }
      variables[key] = value;
      assignments.push(\`\${escapeEdgeQLIdent(key)} := \${ApiKeyQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`);
    }
    const query = \`update api::ApiKey filter .id = <uuid>\$id set { \${assignments.join(", ")} }\`;
    const [row] = reviveTyped(await this.client.query<Types.api.ApiKeyMutationResult[]>(query, variables), ApiKeyQueryBuilder._typeInfo);
    return row ?? { updated: 0 };
  }

  /** Delete ApiKey by ID. Resolves to the number of rows deleted (0 or 1); use \`select (delete …) { … }\` to read the row back. */
  async delete(id: string): Promise<{ deleted: number }> {
    const query = \`delete api::ApiKey filter .id = <uuid>\$id\`;
    const rows = await this.client.query<unknown[]>(query, { id });
    return { deleted: rows.length };
  }

  /** Count ApiKey objects */
  async count(condition?: string, variables?: Types.api.ApiKeyFilterVars): Promise<number> {
    const query = condition
      ? \`select count(api::ApiKey filter \${condition})\`
      : \`select count(api::ApiKey)\`;
    const [count] = await this.client.query<[number]>(query, variables);
    return count;
  }
}

/**
 * Query builder for Payment
 */
export class PaymentQueryBuilder {
  private static _typeCasts: Record<string, string> = {
    amount: "<decimal>",
    currency: "<str>",
    status: "<str>",
    merchant: "<uuid>",
  };

  private static _multiLinkTargets: Record<string, string> = {
  };

  static readonly _typeInfo: TypeInfo = {
    casts: {
      id: "<uuid>",
      amount: "<decimal>",
      currency: "<str>",
      status: "<str>",
    },
    links: {
      merchant: () => MerchantQueryBuilder._typeInfo,
    }
  };

  constructor(private client: DiscClient) {}

  /** Select all Payment objects: without a shape, \`id\` and the stored properties */
  select(): Promise<Types.payment.PaymentRow[]>;
  select(shape: string): Promise<Types.payment.Payment[]>;
  async select(shape?: string): Promise<Types.payment.PaymentRow[] | Types.payment.Payment[]> {
    const query = shape 
      ? \`select payment::Payment \${shape}\`
      : \`select payment::Payment { * }\`;
    return reviveTyped(await this.client.query<Types.payment.PaymentRow[] | Types.payment.Payment[]>(query), PaymentQueryBuilder._typeInfo);
  }

  /** Select Payment by ID: without a shape, \`id\` and the stored properties */
  selectById(id: string): Promise<Types.payment.PaymentRow | null>;
  selectById(id: string, shape: string): Promise<Types.payment.Payment | null>;
  async selectById(id: string, shape?: string): Promise<Types.payment.PaymentRow | Types.payment.Payment | null> {
    const query = shape
      ? \`select payment::Payment \${shape} filter .id = <uuid>\$id\`
      : \`select payment::Payment { * } filter .id = <uuid>\$id\`;
    const results = reviveTyped(await this.client.query<(Types.payment.PaymentRow | Types.payment.Payment)[]>(query, { id }), PaymentQueryBuilder._typeInfo);
    return results[0] || null;
  }

  /** Filter Payment objects: without a \`select\`, \`id\` and the stored properties */
  filter(filter: FilterArg<Types.payment.PaymentFilter> & { select?: undefined }): Promise<Types.payment.PaymentRow[]>;
  filter(filter: FilterArg<Types.payment.PaymentFilter>): Promise<Types.payment.Payment[]>;
  async filter(filter: FilterArg<Types.payment.PaymentFilter>): Promise<Types.payment.PaymentRow[] | Types.payment.Payment[]> {
    const compiled = compileFilter("payment::Payment", filter, PaymentQueryBuilder._typeInfo);
    const shape = compiled.selectShape ?? "{ * }";
    const parts: string[] = [\`select payment::Payment \${shape}\`];
    if (compiled.clause) parts.push(\`filter \${compiled.clause}\`);
    if (compiled.orderBy) parts.push(compiled.orderBy);
    if (compiled.limit !== null) parts.push(\`limit \${compiled.limit}\`);
    if (compiled.offset !== null) parts.push(\`offset \${compiled.offset}\`);
    return reviveTyped(await this.client.query<Types.payment.PaymentRow[] | Types.payment.Payment[]>(parts.join(" "), compiled.variables), PaymentQueryBuilder._typeInfo);
  }

  /** Insert new Payment. Resolves to its stored row: single links as ids, no multi links. */
  async insert(data: Types.payment.PaymentInsert): Promise<Types.payment.PaymentMutationResult> {
    const variables: Record<string, unknown> = {};
    const assignments = Object.entries(data).map(([key, value]) => {
      const target = PaymentQueryBuilder._multiLinkTargets[key];
      if (target) {
        variables[key] = value;
        return \`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`;
      }
      variables[key] = value;
      return \`\${escapeEdgeQLIdent(key)} := \${PaymentQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`;
    }).join(", ");
    const query = \`insert payment::Payment { \${assignments} }\`;
    const [row] = reviveTyped(await this.client.query<Types.payment.PaymentMutationResult[]>(query, variables), PaymentQueryBuilder._typeInfo);
    return row;
  }

  /** Update Payment by ID. Resolves to its stored row (single links as ids, no multi links), or \`{ updated: 0 }\` when no Payment has that ID. */
  async update(id: string, data: Types.payment.PaymentUpdate): Promise<Types.payment.PaymentMutationResult | { updated: 0 }> {
    const variables: Record<string, unknown> = { id };
    const assignments: string[] = [];
    for (const [key, value] of Object.entries(data)) {
      const target = PaymentQueryBuilder._multiLinkTargets[key];
      if (target) {
        if (Array.isArray(value)) {
          variables[key] = value;
          assignments.push(\`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`);
        } else {
          const delta = (value ?? {}) as { add?: string[]; remove?: string[] };
          if (delta.add) {
            variables[\`\${key}__add\`] = delta.add;
            assignments.push(\`\${escapeEdgeQLIdent(key)} += (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__add))\`);
          }
          if (delta.remove) {
            variables[\`\${key}__remove\`] = delta.remove;
            assignments.push(\`\${escapeEdgeQLIdent(key)} -= (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__remove))\`);
          }
        }
        continue;
      }
      variables[key] = value;
      assignments.push(\`\${escapeEdgeQLIdent(key)} := \${PaymentQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`);
    }
    const query = \`update payment::Payment filter .id = <uuid>\$id set { \${assignments.join(", ")} }\`;
    const [row] = reviveTyped(await this.client.query<Types.payment.PaymentMutationResult[]>(query, variables), PaymentQueryBuilder._typeInfo);
    return row ?? { updated: 0 };
  }

  /** Delete Payment by ID. Resolves to the number of rows deleted (0 or 1); use \`select (delete …) { … }\` to read the row back. */
  async delete(id: string): Promise<{ deleted: number }> {
    const query = \`delete payment::Payment filter .id = <uuid>\$id\`;
    const rows = await this.client.query<unknown[]>(query, { id });
    return { deleted: rows.length };
  }

  /** Count Payment objects */
  async count(condition?: string, variables?: Types.payment.PaymentFilterVars): Promise<number> {
    const query = condition
      ? \`select count(payment::Payment filter \${condition})\`
      : \`select count(payment::Payment)\`;
    const [count] = await this.client.query<[number]>(query, variables);
    return count;
  }
}
',
  path: "./generated/queries.ts",
}
`;

snapshot[`./generated/client.ts 2`] = `
{
  content: '/**
  * Disc Client
  * Generated by Disc TypeScript Codegen
  * Generated at: <MASKED>
  *
  * DO NOT EDIT THIS FILE MANUALLY
  */
import { DiscClient as BaseClient, type DiscClientConfig } from "./sdk/mod.ts";
export type { DiscClientConfig } from "./sdk/mod.ts";
export { and, AuthManager, not, or, SubscriptionClient } from "./sdk/mod.ts";
import * as Queries from "./queries.ts";

/**
 * Type-safe Disc database client with query builders
 */
export class DiscClient extends BaseClient {
  // default module
  readonly merchant: Queries.MerchantQueryBuilder;
  // api module
  readonly apikey: Queries.ApiKeyQueryBuilder;
  // payment module
  readonly payment: Queries.PaymentQueryBuilder;

  constructor(config?: DiscClientConfig) {
    super(config);
    this.merchant = new Queries.MerchantQueryBuilder(this);
    this.apikey = new Queries.ApiKeyQueryBuilder(this);
    this.payment = new Queries.PaymentQueryBuilder(this);
  }
}
',
  path: "./generated/client.ts",
}
`;

snapshot[`./generated/index.ts 2`] = `
{
  content: '/**
  * Generated API
  * Generated by Disc TypeScript Codegen
  * Generated at: <MASKED>
  *
  * DO NOT EDIT THIS FILE MANUALLY
  */
// Type definitions
export * from "./interfaces.ts";

// Query builders
export * from "./queries.ts";

// Client
export * from "./client.ts";

// SDK re-exports
export { and, AuthManager, not, or, SubscriptionClient } from "./client.ts";

// Default client export
import { DiscClient } from "./client.ts";
export default DiscClient;
',
  path: "./generated/index.ts",
}
`;

snapshot[`./generated/types.ts 2`] = `
{
  content: '/**
  * Type Definitions
  * Generated by Disc TypeScript Codegen
  * Generated at: <MASKED>
  *
  * DO NOT EDIT THIS FILE MANUALLY
  */
/**
 * Kind enum type from EdgeQL schema
 */
export type Kind = "alpha" | "beta" | "gamma";

/**
 * Person type from EdgeQL schema
 * Table: people
 */
export interface Person {
  /** Unique identifier */
  id: string;
  /** str (required) */
  name: string;
}

/**
 * Place type from EdgeQL schema
 * Table: places
 */
export interface Place {
  /** Unique identifier */
  id: string;
  /**
   * str (required)
   * @constraint max_length(255)
   */
  name: string;
  /** Kind (required) */
  kind: Kind;
  /** int32 */
  visits?: number | null;
  /** array<str> */
  tags?: string[] | null;
  /** tuple<a: float64, b: float64> (required) */
  point: { a: number; b: number };
  /** array<tuple<lat: float64, lng: float64>> */
  route?: { lat: number; lng: number }[] | null;
  /** cal::local_datetime */
  openedAt?: string | null;
  /** (computed) */
  counts?: unknown | null;
  /** Link to Person (one, required) */
  owner: [Person];
  /** Link to Person (many) */
  members?: Person[] | null;
}

/**
 * Utility types for EdgeQL operations
 */

/** Query result wrapper */
export interface QueryResult<T> {
  data: T;
  extensions?: {
    durationMs?: number;
    queryHash?: string;
    sql?: string;
  };
}

/** Query error */
export interface QueryError {
  message: string;
  locations?: Array<{ line: number; column: number }>;
  path?: Array<string | number>;
  extensions?: Record<string, any>;
}

/** Equality + set operators — available on every scalar field */
export interface Op<T> {
  eq?: T;
  ne?: T;
  in?: T[];
  not_in?: T[];
}

/** Ordered operators — numbers, dates, durations */
export interface OrdOp<T> extends Op<T> {
  gt?: T;
  gte?: T;
  lt?: T;
  lte?: T;
}

/** String operators — adds pattern matching to ordered string ops */
export interface StrOp extends OrdOp<string> {
  like?: string;
  ilike?: string;
}/** Insert/Update/MutationResult/Row/FilterVars/Filter/Select data types */
export interface PersonInsert {
  name: string;
}

export interface PersonUpdate {
  name?: string;
}

/** Person as insert() and update() return it: the stored row, single links as target ids; no multi links or computed fields */
export interface PersonMutationResult {
  id: string;
  name: string;
}

/** Person as select(), selectById() and filter() return it without a shape: id and stored properties; no links or computed fields */
export interface PersonRow {
  id: string;
  name: string;
}

export interface PersonFilterVars {
  id?: string;
  name?: string;
  [key: string]: unknown;
}

export interface PersonFilter {
  id?: string | Op<string>;
  name?: string | StrOp;
  select?: PersonSelect;
  order_by?: string | string[];
  limit?: number;
  offset?: number;
}

export interface PersonSelect {
  "*"?: boolean;
  filter?: PersonFilter;
  order_by?: string | string[];
  limit?: number;
  offset?: number;
  id?: boolean;
  name?: boolean;
}

export interface PlaceInsert {
  name: string;
  kind: Kind;
  visits?: number;
  tags?: string[];
  point: { a: number; b: number };
  route?: { lat: number; lng: number }[];
  openedAt?: string;
  /** UUID of the linked Person */
  owner: string;
  /** UUIDs of linked Person (assigns the full set) */
  members?: string[];
}

export interface PlaceUpdate {
  name?: string;
  kind?: Kind;
  visits?: number;
  tags?: string[];
  point?: { a: number; b: number };
  route?: { lat: number; lng: number }[];
  openedAt?: string;
  /** UUID of the linked Person */
  owner?: string;
  /** UUIDs of linked Person: an array replaces the whole set; { add, remove } applies a delta */
  members?: string[] | { add?: string[]; remove?: string[] };
}

/** Place as insert() and update() return it: the stored row, single links as target ids; no multi links or computed fields */
export interface PlaceMutationResult {
  id: string;
  name: string;
  kind: Kind;
  visits: number | null;
  tags: string[] | null;
  point: { a: number; b: number };
  route: { lat: number; lng: number }[] | null;
  openedAt: string | null;
  owner: string;
}

/** Place as select(), selectById() and filter() return it without a shape: id and stored properties; no links or computed fields */
export interface PlaceRow {
  id: string;
  name: string;
  kind: Kind;
  visits: number | null;
  tags: string[] | null;
  point: { a: number; b: number };
  route: { lat: number; lng: number }[] | null;
  openedAt: string | null;
}

export interface PlaceFilterVars {
  id?: string;
  name?: string;
  kind?: Kind;
  visits?: number;
  tags?: string[];
  point?: { a: number; b: number };
  route?: { lat: number; lng: number }[];
  openedAt?: string;
  counts?: unknown;
  [key: string]: unknown;
}

export interface PlaceFilter {
  id?: string | Op<string>;
  name?: string | StrOp;
  kind?: Kind | Op<Kind>;
  visits?: number | OrdOp<number>;
  tags?: string[] | Op<string[]>;
  point?: { a: number; b: number } | Op<{ a: number; b: number }>;
  route?: { lat: number; lng: number }[] | Op<{ lat: number; lng: number }[]>;
  openedAt?: string | OrdOp<string>;
  counts?: { videos?: bigint | OrdOp<bigint>; total?: bigint | OrdOp<bigint>; score?: number | OrdOp<number> };
  owner?: PersonFilter;
  members?: PersonFilter;
  select?: PlaceSelect;
  order_by?: string | string[];
  limit?: number;
  offset?: number;
}

export interface PlaceSelect {
  "*"?: boolean;
  filter?: PlaceFilter;
  order_by?: string | string[];
  limit?: number;
  offset?: number;
  id?: boolean;
  name?: boolean;
  kind?: boolean;
  visits?: boolean;
  tags?: boolean;
  point?: boolean;
  route?: boolean;
  openedAt?: boolean;
  counts?: boolean;
  owner?: boolean | PersonSelect;
  members?: boolean | PersonSelect;
}
',
  path: "./generated/types.ts",
}
`;

snapshot[`./generated/queries.ts 3`] = `
{
  content: '/**
  * Query Builders
  * Generated by Disc TypeScript Codegen
  * Generated at: <MASKED>
  *
  * DO NOT EDIT THIS FILE MANUALLY
  */
import * as Types from "./types.ts";
import { DiscClient } from "./client.ts";
import { compileFilter, escapeEdgeQLIdent, reviveTyped, type FilterArg, type TypeInfo } from "./sdk/mod.ts";

/**
 * Query builder for Person
 */
export class PersonQueryBuilder {
  private static _typeCasts: Record<string, string> = {
    name: "<str>",
  };

  private static _multiLinkTargets: Record<string, string> = {
  };

  static readonly _typeInfo: TypeInfo = {
    casts: {
      id: "<uuid>",
      name: "<str>",
    },
    links: {
    }
  };

  constructor(private client: DiscClient) {}

  /** Select all Person objects: without a shape, \`id\` and the stored properties */
  select(): Promise<Types.PersonRow[]>;
  select(shape: string): Promise<Types.Person[]>;
  async select(shape?: string): Promise<Types.PersonRow[] | Types.Person[]> {
    const query = shape 
      ? \`select Person \${shape}\`
      : \`select Person { * }\`;
    return reviveTyped(await this.client.query<Types.PersonRow[] | Types.Person[]>(query), PersonQueryBuilder._typeInfo);
  }

  /** Select Person by ID: without a shape, \`id\` and the stored properties */
  selectById(id: string): Promise<Types.PersonRow | null>;
  selectById(id: string, shape: string): Promise<Types.Person | null>;
  async selectById(id: string, shape?: string): Promise<Types.PersonRow | Types.Person | null> {
    const query = shape
      ? \`select Person \${shape} filter .id = <uuid>\$id\`
      : \`select Person { * } filter .id = <uuid>\$id\`;
    const results = reviveTyped(await this.client.query<(Types.PersonRow | Types.Person)[]>(query, { id }), PersonQueryBuilder._typeInfo);
    return results[0] || null;
  }

  /** Filter Person objects: without a \`select\`, \`id\` and the stored properties */
  filter(filter: FilterArg<Types.PersonFilter> & { select?: undefined }): Promise<Types.PersonRow[]>;
  filter(filter: FilterArg<Types.PersonFilter>): Promise<Types.Person[]>;
  async filter(filter: FilterArg<Types.PersonFilter>): Promise<Types.PersonRow[] | Types.Person[]> {
    const compiled = compileFilter("Person", filter, PersonQueryBuilder._typeInfo);
    const shape = compiled.selectShape ?? "{ * }";
    const parts: string[] = [\`select Person \${shape}\`];
    if (compiled.clause) parts.push(\`filter \${compiled.clause}\`);
    if (compiled.orderBy) parts.push(compiled.orderBy);
    if (compiled.limit !== null) parts.push(\`limit \${compiled.limit}\`);
    if (compiled.offset !== null) parts.push(\`offset \${compiled.offset}\`);
    return reviveTyped(await this.client.query<Types.PersonRow[] | Types.Person[]>(parts.join(" "), compiled.variables), PersonQueryBuilder._typeInfo);
  }

  /** Insert new Person. Resolves to its stored row: single links as ids, no multi links. */
  async insert(data: Types.PersonInsert): Promise<Types.PersonMutationResult> {
    const variables: Record<string, unknown> = {};
    const assignments = Object.entries(data).map(([key, value]) => {
      const target = PersonQueryBuilder._multiLinkTargets[key];
      if (target) {
        variables[key] = value;
        return \`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`;
      }
      variables[key] = value;
      return \`\${escapeEdgeQLIdent(key)} := \${PersonQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`;
    }).join(", ");
    const query = \`insert Person { \${assignments} }\`;
    const [row] = reviveTyped(await this.client.query<Types.PersonMutationResult[]>(query, variables), PersonQueryBuilder._typeInfo);
    return row;
  }

  /** Update Person by ID. Resolves to its stored row (single links as ids, no multi links), or \`{ updated: 0 }\` when no Person has that ID. */
  async update(id: string, data: Types.PersonUpdate): Promise<Types.PersonMutationResult | { updated: 0 }> {
    const variables: Record<string, unknown> = { id };
    const assignments: string[] = [];
    for (const [key, value] of Object.entries(data)) {
      const target = PersonQueryBuilder._multiLinkTargets[key];
      if (target) {
        if (Array.isArray(value)) {
          variables[key] = value;
          assignments.push(\`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`);
        } else {
          const delta = (value ?? {}) as { add?: string[]; remove?: string[] };
          if (delta.add) {
            variables[\`\${key}__add\`] = delta.add;
            assignments.push(\`\${escapeEdgeQLIdent(key)} += (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__add))\`);
          }
          if (delta.remove) {
            variables[\`\${key}__remove\`] = delta.remove;
            assignments.push(\`\${escapeEdgeQLIdent(key)} -= (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__remove))\`);
          }
        }
        continue;
      }
      variables[key] = value;
      assignments.push(\`\${escapeEdgeQLIdent(key)} := \${PersonQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`);
    }
    const query = \`update Person filter .id = <uuid>\$id set { \${assignments.join(", ")} }\`;
    const [row] = reviveTyped(await this.client.query<Types.PersonMutationResult[]>(query, variables), PersonQueryBuilder._typeInfo);
    return row ?? { updated: 0 };
  }

  /** Delete Person by ID. Resolves to the number of rows deleted (0 or 1); use \`select (delete …) { … }\` to read the row back. */
  async delete(id: string): Promise<{ deleted: number }> {
    const query = \`delete Person filter .id = <uuid>\$id\`;
    const rows = await this.client.query<unknown[]>(query, { id });
    return { deleted: rows.length };
  }

  /** Count Person objects */
  async count(condition?: string, variables?: Types.PersonFilterVars): Promise<number> {
    const query = condition
      ? \`select count(Person filter \${condition})\`
      : \`select count(Person)\`;
    const [count] = await this.client.query<[number]>(query, variables);
    return count;
  }
}

/**
 * Query builder for Place
 */
export class PlaceQueryBuilder {
  private static _typeCasts: Record<string, string> = {
    name: "<str>",
    kind: "<Kind>",
    visits: "<int32>",
    tags: "<array<str>>",
    point: "<tuple<a: float64, b: float64>>",
    route: "<array<tuple<lat: float64, lng: float64>>>",
    openedAt: "<cal::local_datetime>",
    owner: "<uuid>",
  };

  private static _multiLinkTargets: Record<string, string> = {
    members: "Person",
  };

  static readonly _typeInfo: TypeInfo = {
    casts: {
      id: "<uuid>",
      name: "<str>",
      kind: "<Kind>",
      visits: "<int32>",
      tags: "<array<str>>",
      point: "<tuple<a: float64, b: float64>>",
      route: "<array<tuple<lat: float64, lng: float64>>>",
      openedAt: "<cal::local_datetime>",
    },
    links: {
      owner: () => PersonQueryBuilder._typeInfo,
      members: () => PersonQueryBuilder._typeInfo,
    },
    computed: {
      counts: { videos: "<int64>", total: "<int64>", score: "<float64>" }
    },
    multi: ["members"]
  };

  constructor(private client: DiscClient) {}

  /** Select all Place objects: without a shape, \`id\` and the stored properties */
  select(): Promise<Types.PlaceRow[]>;
  select(shape: string): Promise<Types.Place[]>;
  async select(shape?: string): Promise<Types.PlaceRow[] | Types.Place[]> {
    const query = shape 
      ? \`select Place \${shape}\`
      : \`select Place { * }\`;
    return reviveTyped(await this.client.query<Types.PlaceRow[] | Types.Place[]>(query), PlaceQueryBuilder._typeInfo);
  }

  /** Select Place by ID: without a shape, \`id\` and the stored properties */
  selectById(id: string): Promise<Types.PlaceRow | null>;
  selectById(id: string, shape: string): Promise<Types.Place | null>;
  async selectById(id: string, shape?: string): Promise<Types.PlaceRow | Types.Place | null> {
    const query = shape
      ? \`select Place \${shape} filter .id = <uuid>\$id\`
      : \`select Place { * } filter .id = <uuid>\$id\`;
    const results = reviveTyped(await this.client.query<(Types.PlaceRow | Types.Place)[]>(query, { id }), PlaceQueryBuilder._typeInfo);
    return results[0] || null;
  }

  /** Filter Place objects: without a \`select\`, \`id\` and the stored properties */
  filter(filter: FilterArg<Types.PlaceFilter> & { select?: undefined }): Promise<Types.PlaceRow[]>;
  filter(filter: FilterArg<Types.PlaceFilter>): Promise<Types.Place[]>;
  async filter(filter: FilterArg<Types.PlaceFilter>): Promise<Types.PlaceRow[] | Types.Place[]> {
    const compiled = compileFilter("Place", filter, PlaceQueryBuilder._typeInfo);
    const shape = compiled.selectShape ?? "{ * }";
    const parts: string[] = [\`select Place \${shape}\`];
    if (compiled.clause) parts.push(\`filter \${compiled.clause}\`);
    if (compiled.orderBy) parts.push(compiled.orderBy);
    if (compiled.limit !== null) parts.push(\`limit \${compiled.limit}\`);
    if (compiled.offset !== null) parts.push(\`offset \${compiled.offset}\`);
    return reviveTyped(await this.client.query<Types.PlaceRow[] | Types.Place[]>(parts.join(" "), compiled.variables), PlaceQueryBuilder._typeInfo);
  }

  /** Insert new Place. Resolves to its stored row: single links as ids, no multi links. */
  async insert(data: Types.PlaceInsert): Promise<Types.PlaceMutationResult> {
    const variables: Record<string, unknown> = {};
    const assignments = Object.entries(data).map(([key, value]) => {
      const target = PlaceQueryBuilder._multiLinkTargets[key];
      if (target) {
        variables[key] = value;
        return \`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`;
      }
      variables[key] = value;
      return \`\${escapeEdgeQLIdent(key)} := \${PlaceQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`;
    }).join(", ");
    const query = \`insert Place { \${assignments} }\`;
    const [row] = reviveTyped(await this.client.query<Types.PlaceMutationResult[]>(query, variables), PlaceQueryBuilder._typeInfo);
    return row;
  }

  /** Update Place by ID. Resolves to its stored row (single links as ids, no multi links), or \`{ updated: 0 }\` when no Place has that ID. */
  async update(id: string, data: Types.PlaceUpdate): Promise<Types.PlaceMutationResult | { updated: 0 }> {
    const variables: Record<string, unknown> = { id };
    const assignments: string[] = [];
    for (const [key, value] of Object.entries(data)) {
      const target = PlaceQueryBuilder._multiLinkTargets[key];
      if (target) {
        if (Array.isArray(value)) {
          variables[key] = value;
          assignments.push(\`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`);
        } else {
          const delta = (value ?? {}) as { add?: string[]; remove?: string[] };
          if (delta.add) {
            variables[\`\${key}__add\`] = delta.add;
            assignments.push(\`\${escapeEdgeQLIdent(key)} += (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__add))\`);
          }
          if (delta.remove) {
            variables[\`\${key}__remove\`] = delta.remove;
            assignments.push(\`\${escapeEdgeQLIdent(key)} -= (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__remove))\`);
          }
        }
        continue;
      }
      variables[key] = value;
      assignments.push(\`\${escapeEdgeQLIdent(key)} := \${PlaceQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`);
    }
    const query = \`update Place filter .id = <uuid>\$id set { \${assignments.join(", ")} }\`;
    const [row] = reviveTyped(await this.client.query<Types.PlaceMutationResult[]>(query, variables), PlaceQueryBuilder._typeInfo);
    return row ?? { updated: 0 };
  }

  /** Delete Place by ID. Resolves to the number of rows deleted (0 or 1); use \`select (delete …) { … }\` to read the row back. */
  async delete(id: string): Promise<{ deleted: number }> {
    const query = \`delete Place filter .id = <uuid>\$id\`;
    const rows = await this.client.query<unknown[]>(query, { id });
    return { deleted: rows.length };
  }

  /** Count Place objects */
  async count(condition?: string, variables?: Types.PlaceFilterVars): Promise<number> {
    const query = condition
      ? \`select count(Place filter \${condition})\`
      : \`select count(Place)\`;
    const [count] = await this.client.query<[number]>(query, variables);
    return count;
  }
}
',
  path: "./generated/queries.ts",
}
`;

snapshot[`./generated/client.ts 3`] = `
{
  content: '/**
  * Disc Client
  * Generated by Disc TypeScript Codegen
  * Generated at: <MASKED>
  *
  * DO NOT EDIT THIS FILE MANUALLY
  */
import { DiscClient as BaseClient, type DiscClientConfig } from "./sdk/mod.ts";
export type { DiscClientConfig } from "./sdk/mod.ts";
export { and, AuthManager, not, or, SubscriptionClient } from "./sdk/mod.ts";
import * as Queries from "./queries.ts";

/**
 * Type-safe Disc database client with query builders
 */
export class DiscClient extends BaseClient {
  /** Query builder for Person */
  readonly person: Queries.PersonQueryBuilder;
  /** Query builder for Place */
  readonly place: Queries.PlaceQueryBuilder;

  constructor(config?: DiscClientConfig) {
    super(config);
    this.person = new Queries.PersonQueryBuilder(this);
    this.place = new Queries.PlaceQueryBuilder(this);
  }
}
',
  path: "./generated/client.ts",
}
`;

snapshot[`./generated/index.ts 3`] = `
{
  content: '/**
  * Generated API
  * Generated by Disc TypeScript Codegen
  * Generated at: <MASKED>
  *
  * DO NOT EDIT THIS FILE MANUALLY
  */
// Type definitions
export * from "./types.ts";

// Query builders
export * from "./queries.ts";

// Client
export * from "./client.ts";

// SDK re-exports
export { and, AuthManager, not, or, SubscriptionClient } from "./client.ts";

// Default client export
import { DiscClient } from "./client.ts";
export default DiscClient;
',
  path: "./generated/index.ts",
}
`;

snapshot[`./generated/interfaces.ts 2`] = `
{
  content: '/**
  * Type Definitions
  * Generated by Disc TypeScript Codegen
  * Generated at: <MASKED>
  *
  * DO NOT EDIT THIS FILE MANUALLY
  */
export namespace \$default {
  /**
   * Person type from EdgeQL schema
   * Table: persons
   */
  export interface Person {
    /** Unique identifier */
    id: string;
  }

  export interface PersonInsert {
  }

  export interface PersonUpdate {
  }

  /** Person as insert() and update() return it: the stored row, single links as target ids; no multi links or computed fields */
  export interface PersonMutationResult {
    id: string;
  }

  /** Person as select(), selectById() and filter() return it without a shape: id and stored properties; no links or computed fields */
  export interface PersonRow {
    id: string;
  }

  export interface PersonFilterVars {
    id?: string;
    [key: string]: unknown;
  }

  export interface PersonFilter {
    id?: string | Op<string>;
    select?: PersonSelect;
    order_by?: string | string[];
    limit?: number;
    offset?: number;
  }

  export interface PersonSelect {
    "*"?: boolean;
    filter?: PersonFilter;
    order_by?: string | string[];
    limit?: number;
    offset?: number;
    id?: boolean;
  }

  /**
   * Pet type from EdgeQL schema
   * Table: pets
   */
  export interface Pet {
    /** Unique identifier */
    id: string;
    /** Link to default::Person (one, required) */
    owner: [Person];
    /** Link to default::Person (many) */
    friends?: Person[] | null;
  }

  export interface PetInsert {
    /** UUID of the linked default::Person */
    owner: string;
    /** UUIDs of linked Person (assigns the full set) */
    friends?: string[];
  }

  export interface PetUpdate {
    /** UUID of the linked default::Person */
    owner?: string;
    /** UUIDs of linked Person: an array replaces the whole set; { add, remove } applies a delta */
    friends?: string[] | { add?: string[]; remove?: string[] };
  }

  /** Pet as insert() and update() return it: the stored row, single links as target ids; no multi links or computed fields */
  export interface PetMutationResult {
    id: string;
    owner: string;
  }

  /** Pet as select(), selectById() and filter() return it without a shape: id and stored properties; no links or computed fields */
  export interface PetRow {
    id: string;
  }

  export interface PetFilterVars {
    id?: string;
    [key: string]: unknown;
  }

  export interface PetFilter {
    id?: string | Op<string>;
    owner?: PersonFilter;
    friends?: PersonFilter;
    select?: PetSelect;
    order_by?: string | string[];
    limit?: number;
    offset?: number;
  }

  export interface PetSelect {
    "*"?: boolean;
    filter?: PetFilter;
    order_by?: string | string[];
    limit?: number;
    offset?: number;
    id?: boolean;
    owner?: boolean | PersonSelect;
    friends?: boolean | PersonSelect;
  }

}

/**
 * Utility types for EdgeQL operations
 */

/** Query result wrapper */
export interface QueryResult<T> {
  data: T;
  extensions?: {
    durationMs?: number;
    queryHash?: string;
    sql?: string;
  };
}

/** Query error */
export interface QueryError {
  message: string;
  locations?: Array<{ line: number; column: number }>;
  path?: Array<string | number>;
  extensions?: Record<string, any>;
}

/** Equality + set operators — available on every scalar field */
export interface Op<T> {
  eq?: T;
  ne?: T;
  in?: T[];
  not_in?: T[];
}

/** Ordered operators — numbers, dates, durations */
export interface OrdOp<T> extends Op<T> {
  gt?: T;
  gte?: T;
  lt?: T;
  lte?: T;
}

/** String operators — adds pattern matching to ordered string ops */
export interface StrOp extends OrdOp<string> {
  like?: string;
  ilike?: string;
}
',
  path: "./generated/interfaces.ts",
}
`;

snapshot[`./generated/queries.ts 4`] = `
{
  content: '/**
  * Query Builders
  * Generated by Disc TypeScript Codegen
  * Generated at: <MASKED>
  *
  * DO NOT EDIT THIS FILE MANUALLY
  */
import * as Types from "./interfaces.ts";
import { DiscClient } from "./client.ts";
import { compileFilter, escapeEdgeQLIdent, reviveTyped, type FilterArg, type TypeInfo } from "./sdk/mod.ts";

/**
 * Query builder for Person
 */
export class PersonQueryBuilder {
  private static _typeCasts: Record<string, string> = {
  };

  private static _multiLinkTargets: Record<string, string> = {
  };

  static readonly _typeInfo: TypeInfo = {
    casts: {
      id: "<uuid>",
    },
    links: {
    }
  };

  constructor(private client: DiscClient) {}

  /** Select all Person objects: without a shape, \`id\` and the stored properties */
  select(): Promise<Types.\$default.PersonRow[]>;
  select(shape: string): Promise<Types.\$default.Person[]>;
  async select(shape?: string): Promise<Types.\$default.PersonRow[] | Types.\$default.Person[]> {
    const query = shape 
      ? \`select Person \${shape}\`
      : \`select Person { * }\`;
    return reviveTyped(await this.client.query<Types.\$default.PersonRow[] | Types.\$default.Person[]>(query), PersonQueryBuilder._typeInfo);
  }

  /** Select Person by ID: without a shape, \`id\` and the stored properties */
  selectById(id: string): Promise<Types.\$default.PersonRow | null>;
  selectById(id: string, shape: string): Promise<Types.\$default.Person | null>;
  async selectById(id: string, shape?: string): Promise<Types.\$default.PersonRow | Types.\$default.Person | null> {
    const query = shape
      ? \`select Person \${shape} filter .id = <uuid>\$id\`
      : \`select Person { * } filter .id = <uuid>\$id\`;
    const results = reviveTyped(await this.client.query<(Types.\$default.PersonRow | Types.\$default.Person)[]>(query, { id }), PersonQueryBuilder._typeInfo);
    return results[0] || null;
  }

  /** Filter Person objects: without a \`select\`, \`id\` and the stored properties */
  filter(filter: FilterArg<Types.\$default.PersonFilter> & { select?: undefined }): Promise<Types.\$default.PersonRow[]>;
  filter(filter: FilterArg<Types.\$default.PersonFilter>): Promise<Types.\$default.Person[]>;
  async filter(filter: FilterArg<Types.\$default.PersonFilter>): Promise<Types.\$default.PersonRow[] | Types.\$default.Person[]> {
    const compiled = compileFilter("Person", filter, PersonQueryBuilder._typeInfo);
    const shape = compiled.selectShape ?? "{ * }";
    const parts: string[] = [\`select Person \${shape}\`];
    if (compiled.clause) parts.push(\`filter \${compiled.clause}\`);
    if (compiled.orderBy) parts.push(compiled.orderBy);
    if (compiled.limit !== null) parts.push(\`limit \${compiled.limit}\`);
    if (compiled.offset !== null) parts.push(\`offset \${compiled.offset}\`);
    return reviveTyped(await this.client.query<Types.\$default.PersonRow[] | Types.\$default.Person[]>(parts.join(" "), compiled.variables), PersonQueryBuilder._typeInfo);
  }

  /** Insert new Person. Resolves to its stored row: single links as ids, no multi links. */
  async insert(data: Types.\$default.PersonInsert): Promise<Types.\$default.PersonMutationResult> {
    const variables: Record<string, unknown> = {};
    const assignments = Object.entries(data).map(([key, value]) => {
      const target = PersonQueryBuilder._multiLinkTargets[key];
      if (target) {
        variables[key] = value;
        return \`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`;
      }
      variables[key] = value;
      return \`\${escapeEdgeQLIdent(key)} := \${PersonQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`;
    }).join(", ");
    const query = \`insert Person { \${assignments} }\`;
    const [row] = reviveTyped(await this.client.query<Types.\$default.PersonMutationResult[]>(query, variables), PersonQueryBuilder._typeInfo);
    return row;
  }

  /** Update Person by ID. Resolves to its stored row (single links as ids, no multi links), or \`{ updated: 0 }\` when no Person has that ID. */
  async update(id: string, data: Types.\$default.PersonUpdate): Promise<Types.\$default.PersonMutationResult | { updated: 0 }> {
    const variables: Record<string, unknown> = { id };
    const assignments: string[] = [];
    for (const [key, value] of Object.entries(data)) {
      const target = PersonQueryBuilder._multiLinkTargets[key];
      if (target) {
        if (Array.isArray(value)) {
          variables[key] = value;
          assignments.push(\`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`);
        } else {
          const delta = (value ?? {}) as { add?: string[]; remove?: string[] };
          if (delta.add) {
            variables[\`\${key}__add\`] = delta.add;
            assignments.push(\`\${escapeEdgeQLIdent(key)} += (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__add))\`);
          }
          if (delta.remove) {
            variables[\`\${key}__remove\`] = delta.remove;
            assignments.push(\`\${escapeEdgeQLIdent(key)} -= (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__remove))\`);
          }
        }
        continue;
      }
      variables[key] = value;
      assignments.push(\`\${escapeEdgeQLIdent(key)} := \${PersonQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`);
    }
    const query = \`update Person filter .id = <uuid>\$id set { \${assignments.join(", ")} }\`;
    const [row] = reviveTyped(await this.client.query<Types.\$default.PersonMutationResult[]>(query, variables), PersonQueryBuilder._typeInfo);
    return row ?? { updated: 0 };
  }

  /** Delete Person by ID. Resolves to the number of rows deleted (0 or 1); use \`select (delete …) { … }\` to read the row back. */
  async delete(id: string): Promise<{ deleted: number }> {
    const query = \`delete Person filter .id = <uuid>\$id\`;
    const rows = await this.client.query<unknown[]>(query, { id });
    return { deleted: rows.length };
  }

  /** Count Person objects */
  async count(condition?: string, variables?: Types.\$default.PersonFilterVars): Promise<number> {
    const query = condition
      ? \`select count(Person filter \${condition})\`
      : \`select count(Person)\`;
    const [count] = await this.client.query<[number]>(query, variables);
    return count;
  }
}

/**
 * Query builder for Pet
 */
export class PetQueryBuilder {
  private static _typeCasts: Record<string, string> = {
    owner: "<uuid>",
  };

  private static _multiLinkTargets: Record<string, string> = {
    friends: "Person",
  };

  static readonly _typeInfo: TypeInfo = {
    casts: {
      id: "<uuid>",
    },
    links: {
      owner: () => PersonQueryBuilder._typeInfo,
      friends: () => PersonQueryBuilder._typeInfo,
    },
    multi: ["friends"]
  };

  constructor(private client: DiscClient) {}

  /** Select all Pet objects: without a shape, \`id\` and the stored properties */
  select(): Promise<Types.\$default.PetRow[]>;
  select(shape: string): Promise<Types.\$default.Pet[]>;
  async select(shape?: string): Promise<Types.\$default.PetRow[] | Types.\$default.Pet[]> {
    const query = shape 
      ? \`select Pet \${shape}\`
      : \`select Pet { * }\`;
    return reviveTyped(await this.client.query<Types.\$default.PetRow[] | Types.\$default.Pet[]>(query), PetQueryBuilder._typeInfo);
  }

  /** Select Pet by ID: without a shape, \`id\` and the stored properties */
  selectById(id: string): Promise<Types.\$default.PetRow | null>;
  selectById(id: string, shape: string): Promise<Types.\$default.Pet | null>;
  async selectById(id: string, shape?: string): Promise<Types.\$default.PetRow | Types.\$default.Pet | null> {
    const query = shape
      ? \`select Pet \${shape} filter .id = <uuid>\$id\`
      : \`select Pet { * } filter .id = <uuid>\$id\`;
    const results = reviveTyped(await this.client.query<(Types.\$default.PetRow | Types.\$default.Pet)[]>(query, { id }), PetQueryBuilder._typeInfo);
    return results[0] || null;
  }

  /** Filter Pet objects: without a \`select\`, \`id\` and the stored properties */
  filter(filter: FilterArg<Types.\$default.PetFilter> & { select?: undefined }): Promise<Types.\$default.PetRow[]>;
  filter(filter: FilterArg<Types.\$default.PetFilter>): Promise<Types.\$default.Pet[]>;
  async filter(filter: FilterArg<Types.\$default.PetFilter>): Promise<Types.\$default.PetRow[] | Types.\$default.Pet[]> {
    const compiled = compileFilter("Pet", filter, PetQueryBuilder._typeInfo);
    const shape = compiled.selectShape ?? "{ * }";
    const parts: string[] = [\`select Pet \${shape}\`];
    if (compiled.clause) parts.push(\`filter \${compiled.clause}\`);
    if (compiled.orderBy) parts.push(compiled.orderBy);
    if (compiled.limit !== null) parts.push(\`limit \${compiled.limit}\`);
    if (compiled.offset !== null) parts.push(\`offset \${compiled.offset}\`);
    return reviveTyped(await this.client.query<Types.\$default.PetRow[] | Types.\$default.Pet[]>(parts.join(" "), compiled.variables), PetQueryBuilder._typeInfo);
  }

  /** Insert new Pet. Resolves to its stored row: single links as ids, no multi links. */
  async insert(data: Types.\$default.PetInsert): Promise<Types.\$default.PetMutationResult> {
    const variables: Record<string, unknown> = {};
    const assignments = Object.entries(data).map(([key, value]) => {
      const target = PetQueryBuilder._multiLinkTargets[key];
      if (target) {
        variables[key] = value;
        return \`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`;
      }
      variables[key] = value;
      return \`\${escapeEdgeQLIdent(key)} := \${PetQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`;
    }).join(", ");
    const query = \`insert Pet { \${assignments} }\`;
    const [row] = reviveTyped(await this.client.query<Types.\$default.PetMutationResult[]>(query, variables), PetQueryBuilder._typeInfo);
    return row;
  }

  /** Update Pet by ID. Resolves to its stored row (single links as ids, no multi links), or \`{ updated: 0 }\` when no Pet has that ID. */
  async update(id: string, data: Types.\$default.PetUpdate): Promise<Types.\$default.PetMutationResult | { updated: 0 }> {
    const variables: Record<string, unknown> = { id };
    const assignments: string[] = [];
    for (const [key, value] of Object.entries(data)) {
      const target = PetQueryBuilder._multiLinkTargets[key];
      if (target) {
        if (Array.isArray(value)) {
          variables[key] = value;
          assignments.push(\`\${escapeEdgeQLIdent(key)} := (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}))\`);
        } else {
          const delta = (value ?? {}) as { add?: string[]; remove?: string[] };
          if (delta.add) {
            variables[\`\${key}__add\`] = delta.add;
            assignments.push(\`\${escapeEdgeQLIdent(key)} += (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__add))\`);
          }
          if (delta.remove) {
            variables[\`\${key}__remove\`] = delta.remove;
            assignments.push(\`\${escapeEdgeQLIdent(key)} -= (select \${target} filter .id in array_unpack(<array<uuid>>\$\${key}__remove))\`);
          }
        }
        continue;
      }
      variables[key] = value;
      assignments.push(\`\${escapeEdgeQLIdent(key)} := \${PetQueryBuilder._typeCasts[key] || "<str>"}\$\${key}\`);
    }
    const query = \`update Pet filter .id = <uuid>\$id set { \${assignments.join(", ")} }\`;
    const [row] = reviveTyped(await this.client.query<Types.\$default.PetMutationResult[]>(query, variables), PetQueryBuilder._typeInfo);
    return row ?? { updated: 0 };
  }

  /** Delete Pet by ID. Resolves to the number of rows deleted (0 or 1); use \`select (delete …) { … }\` to read the row back. */
  async delete(id: string): Promise<{ deleted: number }> {
    const query = \`delete Pet filter .id = <uuid>\$id\`;
    const rows = await this.client.query<unknown[]>(query, { id });
    return { deleted: rows.length };
  }

  /** Count Pet objects */
  async count(condition?: string, variables?: Types.\$default.PetFilterVars): Promise<number> {
    const query = condition
      ? \`select count(Pet filter \${condition})\`
      : \`select count(Pet)\`;
    const [count] = await this.client.query<[number]>(query, variables);
    return count;
  }
}
',
  path: "./generated/queries.ts",
}
`;

snapshot[`./generated/client.ts 4`] = `
{
  content: '/**
  * Disc Client
  * Generated by Disc TypeScript Codegen
  * Generated at: <MASKED>
  *
  * DO NOT EDIT THIS FILE MANUALLY
  */
import { DiscClient as BaseClient, type DiscClientConfig } from "./sdk/mod.ts";
export type { DiscClientConfig } from "./sdk/mod.ts";
export { and, AuthManager, not, or, SubscriptionClient } from "./sdk/mod.ts";
import * as Queries from "./queries.ts";

/**
 * Type-safe Disc database client with query builders
 */
export class DiscClient extends BaseClient {
  // default module
  readonly person: Queries.PersonQueryBuilder;
  readonly pet: Queries.PetQueryBuilder;

  constructor(config?: DiscClientConfig) {
    super(config);
    this.person = new Queries.PersonQueryBuilder(this);
    this.pet = new Queries.PetQueryBuilder(this);
  }
}
',
  path: "./generated/client.ts",
}
`;

snapshot[`./generated/index.ts 4`] = `
{
  content: '/**
  * Generated API
  * Generated by Disc TypeScript Codegen
  * Generated at: <MASKED>
  *
  * DO NOT EDIT THIS FILE MANUALLY
  */
// Type definitions
export * from "./interfaces.ts";

// Query builders
export * from "./queries.ts";

// Client
export * from "./client.ts";

// SDK re-exports
export { and, AuthManager, not, or, SubscriptionClient } from "./client.ts";

// Default client export
import { DiscClient } from "./client.ts";
export default DiscClient;
',
  path: "./generated/index.ts",
}
`;
